Fix sidebar menu alignment issues

--- a/static/less/_scaffolding.less
+++ b/static/less/_scaffolding.less
@@ -98,13 +98,14 @@ body {
         display: none;
 
         &.expanded {
+          .sl-sb;
+          color: @white;
           display: block;
           padding: 10px 0;
 
           a {
-            .sl-sm;
             color: @gray3;
-            padding: 5px 10px 5px 42px;
+            padding: 5px 10px 5px 38px;
 
             &.active, &:active {
               color: @white;
